<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_deliver"
            android:icon="@drawable/ic_portrait_black_24dp"
            android:title="@string/deliver" />
        <item
            android:id="@+id/nav_fuelupdate"
            android:icon="@drawable/ic_rate_review_black_24dp"
            android:title="@string/fuelupdate" />
        <item
            android:id="@+id/nav_view23"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/view1" />
        <item
            android:id="@+id/nav_logout1"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
