<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notifications">



    <activity
        android:id="@+id/navigation_deliver"
        android:name="com.idea.fuel1.deliver"
        android:label="@string/title_book"
        tools:layout="@layout/fragment_deliver" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.idea.fuel1.ui.notifications.NotificationsFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.idea.fuel1.ui.gallery.GalleryFragment"
        android:label="@string/title_display"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.idea.fuel1.ui.logout.fragment_logout"
        android:label="@string/logout"
        tools:layout="@layout/fragment_gallery" />
</navigation>
